Product card: fix text overflow

--- a/Resources/assets/css/_product-card.scss
+++ b/Resources/assets/css/_product-card.scss
@@ -81,6 +81,7 @@
   color: $black-ter;
   z-index: 3;
   height: 50px;
+  width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-block;
